kubernetes_deployment/http-to-https-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-to-https-redirect
  namespace: <my-namespace>
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-http-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-pioneer-trails
            port:
              number: 8080
